# KJR-OS

kjr_os/: Cargo.toml
kjr_os/.cargo/: config.toml
kjr_os/src/: main.rs
