[package]
name = "kjr_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Profile for cargo build
# Disable Stack Unwinding on Panic
[profile.dev]
panic = "abort"

# The Profile Used for cargo build --release
# Disable Stack Unwinding on Panic
[profile.release]
panic = "abort"

